# nanochat-cuda133-fa4

./: pyproject.toml
nanochat/: flash_attention.py
scripts/: base_train.py
